# inspect-multi-agent-negotiation

./: .gitignore  README.md  example_usage.py  negotiation_benchmark.py  negotiation_dataset.json  negotiation_fixed.py  pyproject.toml
